# argparsing-exercise

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
src/: argparse.cpp  argparse.h  argparse.tpp  argparse_test.cpp  example.cpp  lambda_example.cpp  specification_example.cpp  tuple_cin_example.cpp
